@@ -2,7 +2,7 @@
 A Java app that manages, creates, and checks secure passwords
 
 ## What does this app do?
-This java app was designed to help people be more secure on their computers. Using Leeto Security, you can be sure that your passwords are secure and managed safely
+This java app was designed to help the elderly be more secure on their computers. Using Leeto Security, you can be sure that your passwords are secure and managed safely
 
 ## Authors
 ### Frontend
@@ -10,11 +10,3 @@ The UI functionality was created by Christopher Lee, a grade 11 student at St. A
 ### Backend
 Our algorithms were created by Kaden Seto, a grade 11 student at St. Augustine Catholic High School
 
-
-NOTE TO KADEN
---module-path "PATH TO JFX20" --add-modules=javafx.controls,javafx.fxml
-
-
-NOTE TO OTHER READERS
-
-# THIS IS NOT FINISHED, THIS IS FOR CHEM CPT CURRENTLY IN PROGRESS
